TestSuite/Verification/Error/Parallel/Correctness/On-Device/Inter-Region/Accelerator/out/includes/RecursionTest.hxx

/*********************************************************************/
/*        This is a generated C++ Header file.                       */
/*        Generated by PatternDSL.                                   */
/*        Contains the function declarations for the source file     */
/*********************************************************************/

#ifndef RecursionTest_HXX
#define RecursionTest_HXX

uint randomizer(int n = 42) {
    srand(n);
    return rand();
}


    int32_t counter(int32_t input);

#endif